--- a/services.html
+++ b/services.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="services.css" />
   </head>
   <body>
-    <h2>Services</h2>
+    <div class="ser">
+      <h2>Services</h2>
+    </div>
     <div class="card-container">
       <div class="card" data-url="feedback.html">
         <div class="container">Feedback System</div>
